# amFOSS-tasks

./: README.md
Intospection/: README.md
Task-00/: README.md
Task-01/: README.md
Task-02/: README.md
Task-03/: Great Eye.py  README.md
Task-04/: MathQuiz.java  README.md
Task-05/: Cargo.toml  Covid19 Details.csv  README.md
Task-05/src/: main.rs
Task-06/: Geddit.go  README.md  go.mod
Task-07/: README.md
Task-08/: README.md  Sir Perceval’s quest.py
Task-09/: README.md  Spammer Spaghetti.js
Task-10/: README.md
Task-10/pset 0/Scratch - The Chase/: The Chase.sb3
Task-10/pset 1/Cash/: cash.c
Task-10/pset 1/Hello/: hello.c
Task-10/pset 1/Mario/: mario.c
Task-10/pset 2/Caesar/: caesar.c
Task-10/pset 2/Readability/: readability.c
Task-10/pset 3/Plurality/: plurality.c
Task-10/pset 3/Runoff/: runoff.c
Task-11/: README.md
Task-12/: Is This JEE.java  Is This JEE.py  README.md
Task-13/: Circuit Code.ino  README.md
Task-14/: README.md
Task-14/Level 0/: pass.txt
Task-14/Level 00/: pass.txt
Task-14/Level 01/: pass.txt
Task-14/Level 02/: pass.txt
Task-14/Level 03/: pass.txt
Task-14/Level 04/: pass.txt
Task-14/Level 05/: pass.txt
Task-14/Level 06/: pass.txt
Task-14/Level 07/: pass.txt
Task-14/Level 08/: pass.txt
Task-14/Level 09/: pass.txt
Task-14/Level 1/: pass.txt
Task-14/Level 10/: pass.txt
Task-15/: 1. Multiples of 3 and 5.py  3. Largest Prime Factor.py  5. Smallest Multiple.py  Project 2.py  Project 4.py  README.md
