[package]
name = "rust"
version = "0.1.0"
authors = ["TarunRaveesh <tarunraveesh07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
scraper = "*"
tokio = { version = "0.2", features = ["full"] }
csv = "1.1"